--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
     ],
     "require": {
         "filp/whoops": "^2.14"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
