--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "filp/whoops": "^2.14"
+        "filp/whoops": "^2.14",
+        "vlucas/phpdotenv": "^5.3"
     },
     "autoload": {
         "psr-4": {
